; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/sh/extr_fsi.c_fsi_reg_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/sh/extr_fsi.c_fsi_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsi_priv = type { i64 }

@REG_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.fsi_priv*, i64)* @fsi_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fsi_reg_read(%struct.fsi_priv* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.fsi_priv*, align 8
  %5 = alloca i64, align 8
  store %struct.fsi_priv* %0, %struct.fsi_priv** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @REG_END, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i64 0, i64* %3, align 8
  br label %17

10:                                               ; preds = %2
  %11 = load %struct.fsi_priv*, %struct.fsi_priv** %4, align 8
  %12 = getelementptr inbounds %struct.fsi_priv, %struct.fsi_priv* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i64 @__fsi_reg_read(i64 %15)
  store i64 %16, i64* %3, align 8
  br label %17

17:                                               ; preds = %10, %9
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i64 @__fsi_reg_read(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
